--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,15 @@
 spring:
   datasource:
-    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/postgres
+    username:
+    password:
+    driverClassName:
     initialization-mode: always
   jpa:
     generte-ddl : false
     hibernate:
       ddl-auto: none
+      temp:
+        use_jdbc_metadata_defaults: false
     show_sql: true
-    database-platform : org.hibernate.dialect.PostgreSQLDialect
+    database-platform : org.hibernate.dialect.PostgreSQL95Dialect
